Update search-alignment-fix.css

--- a/beta-test/search-alignment-fix.css
+++ b/beta-test/search-alignment-fix.css
@@ -10,8 +10,8 @@
 #searchResults {
   position: absolute !important;
   top: calc(100% + 8px) !important;
-  left: 0 !important;
-  right: 0 !important;
+  left: -10 !important;
+  right: 10 !important;
   width: 100% !important;
   max-width: none !important;
   transform: none !important;
